# project-seaweed

./: .flake8  .gitignore  .readthedocs.yml  README.md  docker-compose.yml  extract_payload.py  go.mod  go.sum  install.md  main.go  map.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: scheduled_job.yaml  test_run.yaml  tests.yaml
cmd/: root.go
docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt
internal/analyze/: report.go
internal/reader/: reader.go  types.go
src/project_seaweed/: __init__.py  classify.py  cve_tester.py  extract_payload.py  main.py  report_analyzer.py  report_generator.py  test_cve.py  util.py
tests/: conftest.py  test_classify.py  test_cve_tester.py  test_extract.py  test_extract.py(excluded tests)  test_main.py  test_report_analyzer.py  test_report_generator.py  test_utils.py
