[tool.poetry]
name = "project-seaweed"
version = "0.1.0"
description = ""
authors = ["vandanrohatgi <vandanrohatgi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
bs4 = "^0.0.1"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project-seaweed = "project_seaweed.extract_payload:main"

[tool.coverage.paths]
source=["src/"]

[tool.coverage.run]
branch= true
source = ["project_seaweed"]

[tool.coverage.report]
show_missing = true
fail_under = 80