[tool.poetry]
name = "project-seaweed"
version = "2.2.3"
description = ""
authors = ["vandanrohatgi <vandanrohatgi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.0"
docker = "^7.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^24.0.0"
flake8 = "^7.0.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
safety = "^1.10.3"
flake8-annotations = "^2.9.0"
mypy = "^0.961"
types-requests = "^2.27.31"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
typeguard = "^2.13.3"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project-seaweed = "src.project_seaweed.main:main"

[tool.coverage.paths]
source=["src/","*/site_packages"]

[tool.coverage.run]
branch= true
source = ["project_seaweed"]
omit = ["src/project_seaweed/extract_payload.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]
